Fix: Update .env.example - remove Cursor config, add health check vars, verify all params

--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,6 @@ GROK_API_KEY=your_grok_api_key_here
 GROK_MODEL=grok-beta
 GROK_BASE_URL=https://api.x.ai/v1
 
-# Cursor Configuration (OPTIONAL - API may not be available)
-CURSOR_API_KEY=
-CURSOR_MODEL=
-CURSOR_BASE_URL=
-
 # Notion Configuration (REQUIRED)
 NOTION_API_KEY=your_notion_api_key_here
 NOTION_REASONING_PAGE_ID=your_reasoning_page_id_here
@@ -58,3 +53,7 @@ MODERATOR_QUALITY_ASSESSMENT=true
 
 # Logging Configuration (OPTIONAL)
 LOG_LEVEL=info
+
+# Health Check Server (OPTIONAL - for Docker/cloud deployments)
+ENABLE_HEALTH_CHECK=false
+HEALTH_CHECK_PORT=3000
