--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint src --ext .ts",
     "lint:mermaid": "node scripts/lint-mermaid.js",
     "lint:all": "npm run lint && npm run lint:mermaid",
+    "update-models": "node scripts/update-models.js",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
