Rename pricing.json to fallback-pricing.json and add script linting to pre-commit
- Rename scripts/pricing.json to scripts/fallback-pricing.json
- Update all references in update-models.js
- Add lint:scripts npm script to lint JavaScript files in scripts/
- Add lint:scripts to lint:all
- Configure ESLint for Node.js environment (node: true, es2022: true)
- Fix ESLint errors (unused variables, unnecessary escapes, etc.)
- Pre-commit hook already includes lint:all, so scripts will be linted automatically

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,24 @@
     "ecmaVersion": 2022,
     "sourceType": "module"
   },
+  "env": {
+    "node": true,
+    "es2022": true
+  },
+  "overrides": [
+    {
+      "files": ["scripts/**/*.js"],
+      "env": {
+        "node": true,
+        "es2022": true
+      },
+      "rules": {
+        "@typescript-eslint/no-unused-vars": "warn",
+        "no-useless-escape": "warn",
+        "no-useless-catch": "warn"
+      }
+    }
+  ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
