--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "tsx watch src/index.ts",
     "lint": "eslint src --ext .ts",
     "lint:mermaid": "node scripts/lint-mermaid.js",
-    "lint:all": "npm run lint && npm run lint:mermaid",
+    "lint:scripts": "eslint scripts --ext .js",
+    "lint:all": "npm run lint && npm run lint:mermaid && npm run lint:scripts",
     "update-models": "node scripts/update-models.js",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
