--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "tsx watch src/index.ts",
     "lint": "eslint src --ext .ts",
     "lint:mermaid": "node scripts/lint-mermaid.js",
-    "lint:scripts": "eslint scripts --ext .js",
+    "lint:scripts": "eslint scripts --ext .ts,.js",
     "lint:all": "npm run lint && npm run lint:mermaid && npm run lint:scripts",
-    "update-models": "node scripts/update-models.js",
+    "update-models": "tsx scripts/update-models.ts",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
