Add @ai-sdk/xai v2.0.31 for Grok support
- Add @ai-sdk/xai@^2.0.31 to dependencies (installed with --legacy-peer-deps due to zod version conflict)
- Update Grok model fetching comments to reference xAI SDK
- Keep using OpenAI SDK for model listing (xAI SDK is primarily for text generation)
- Reference: https://ai-sdk.dev/providers/ai-sdk-providers/xai

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/xai": "^2.0.31",
     "@anthropic-ai/sdk": "^0.68.0",
     "@notionhq/client": "^2.2.15",
     "discord.js": "^14.14.1",
