--- a/.env.example
+++ b/.env.example
@@ -1,59 +1,23 @@
-# Discord Configuration (REQUIRED)
+# Super Brainstorm Bot - Environment Variables
+# Most settings are now in src/config/default-settings.json
+# Use /sbb settings command in Discord to modify settings interactively
+
+# Discord Configuration (required)
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 DISCORD_GUILD_ID=your_guild_id_here
 DISCORD_CHANNEL_ID=your_channel_id_here
 
-# OpenAI Configuration (REQUIRED - at least one AI provider)
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4-turbo-preview
+# OpenRouter Configuration (required)
+# OpenRouter provides access to 300+ AI models from multiple providers
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# Anthropic Configuration (REQUIRED - at least one AI provider)
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-ANTHROPIC_MODEL=claude-3-opus-20240229
-
-# Grok Configuration (OPTIONAL)
-GROK_API_KEY=your_grok_api_key_here
-GROK_MODEL=grok-beta
-GROK_BASE_URL=https://api.x.ai/v1
-
-# Notion Configuration (REQUIRED)
+# Notion Configuration (required)
+# Single database/page ID that will host all topics as entries
+# Each entry contains: Topic name, TLDR content (first prompt + subsequent TLDRs)
+# Each entry has a subpage: "Reasoning & Transcript" with detailed reasoning and full transcript
 NOTION_API_KEY=your_notion_api_key_here
-NOTION_REASONING_PAGE_ID=your_reasoning_page_id_here
-NOTION_TLDR_PAGE_ID=your_tldr_page_id_here
+NOTION_PAGE_ID=your_notion_database_page_id_here
 
-# Conversation Limits (OPTIONAL - defaults provided)
-MAX_MESSAGES_PER_CONVERSATION=1000
-MAX_TOKENS_PER_CONVERSATION=5000000
-MAX_CONTEXT_WINDOW_PERCENT=80
-CONTEXT_REFRESH_THRESHOLD=50
-CONVERSATION_TIMEOUT_MINUTES=60
-MAX_AI_RESPONSES_PER_TURN=3
-BATCH_REPLY_TIME_WINDOW_SECONDS=60
-
-# Scribe Bot Configuration (OPTIONAL)
-SCRIBE_UPDATE_INTERVAL=60
-SCRIBE_MODEL=chatgpt
-
-# TLDR Bot Configuration (OPTIONAL)
-TLDR_UPDATE_INTERVAL=600
-TLDR_MODEL=chatgpt
-
-# Session Planner Configuration (OPTIONAL)
-SESSION_PLANNER_MODEL=claude
-SESSION_PLANNER_TIMEOUT_MINUTES=30
-SESSION_PLANNER_MAX_QUESTIONS=5
-SESSION_PLANNER_AUTO_START=false
-
-# Session Moderator Configuration (OPTIONAL)
-MODERATOR_CHECK_INTERVAL=10
-MODERATOR_TOPIC_DRIFT_THRESHOLD=0.6
-MODERATOR_MAX_DRIFT_WARNINGS=3
-MODERATOR_PARTICIPANT_BALANCE_CHECK=true
-MODERATOR_QUALITY_ASSESSMENT=true
-
-# Logging Configuration (OPTIONAL)
+# Logging (optional)
 LOG_LEVEL=info
-
-# Health Check Server (OPTIONAL - for Docker/cloud deployments)
-ENABLE_HEALTH_CHECK=false
-HEALTH_CHECK_PORT=3000
