--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "lint:mermaid": "node scripts/lint-mermaid.js",
     "lint:scripts": "eslint scripts --ext .ts,.js",
     "lint:all": "npm run lint && npm run lint:mermaid && npm run lint:scripts",
-    "update-models": "tsx scripts/update-models.ts",
     "type-check": "tsc --noEmit",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "precommit": "npm run lint:all",
     "prepare": "husky || true"
   },
@@ -33,28 +29,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@ai-sdk/xai": "^2.0.31",
-    "@anthropic-ai/sdk": "^0.68.0",
-    "@notionhq/client": "^2.2.15",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "openai": "^4.28.0",
-    "p-queue": "^8.0.1",
-    "tiktoken": "^1.0.10",
-    "winston": "^3.11.0"
+    "@notionhq/client": "^5.3.0",
+    "@openrouter/ai-sdk-provider": "^1.2.1",
+    "ai": "^5.0.89",
+    "discord.js": "^14.24.2",
+    "dotenv": "^17.2.3",
+    "p-queue": "^9.0.0",
+    "tiktoken": "^1.0.22",
+    "winston": "^3.18.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
     "@mermaid-js/mermaid-cli": "^11.12.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "eslint": "^8.56.0",
+    "@types/node": "^20.19.24",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "openai": "^4.76.1",
     "ts-jest": "^29.4.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
