Add mandatory documentation check in pre-commit hook
- Created scripts/check-docs.js to check if code changes require doc updates
- Updated pre-commit hook to run documentation check
- Added check:docs script to package.json
- Created CONTRIBUTING.md with documentation requirements
- Pre-commit hook now blocks commits if code changed but docs not updated
- Provides clear guidance on which docs to update for different changes

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint:mermaid": "node scripts/lint-mermaid.js",
     "lint:scripts": "eslint scripts --ext .ts,.js",
     "lint:all": "npm run lint && npm run lint:mermaid && npm run lint:scripts",
+    "check:docs": "node scripts/check-docs.js",
     "type-check": "tsc --noEmit",
-    "precommit": "npm run lint:all",
+    "precommit": "npm run lint:all && npm run check:docs",
     "prepare": "husky || true"
   },
   "keywords": [
